@@ -43,12 +43,12 @@ namespace QuantLib {
       public:
         typedef Sample<Path> sample_type;
         // constructors
-        PathGenerator(const boost::shared_ptr<StochasticProcess1D>&,
+        PathGenerator(const boost::shared_ptr<StochasticProcess>&,
                       Time length,
                       Size timeSteps,
                       const GSG& generator,
                       bool brownianBridge);
-        PathGenerator(const boost::shared_ptr<StochasticProcess1D>&,
+        PathGenerator(const boost::shared_ptr<StochasticProcess>&,
                       const TimeGrid& timeGrid,
                       const GSG& generator,
                       bool brownianBridge);
@@ -75,16 +75,15 @@ namespace QuantLib {
 
     template <class GSG>
     PathGenerator<GSG>::PathGenerator(
-                        const boost::shared_ptr<StochasticProcess1D>& process,
-                        Time length,
-                        Size timeSteps,
-                        const GSG& generator,
-                        bool brownianBridge)
+                          const boost::shared_ptr<StochasticProcess>& process,
+                          Time length,
+                          Size timeSteps,
+                          const GSG& generator,
+                          bool brownianBridge)
     : brownianBridge_(brownianBridge), generator_(generator),
-      dimension_(generator_.dimension()),
-      timeGrid_(length, timeSteps), process_(process),
-      next_(Path(timeGrid_),1.0),
-      bb_(process_, timeGrid_, generator_) {
+      dimension_(generator_.dimension()), timeGrid_(length, timeSteps),
+      process_(boost::dynamic_pointer_cast<StochasticProcess1D>(process)),
+      next_(Path(timeGrid_),1.0), bb_(process_, timeGrid_, generator_) {
         QL_REQUIRE(dimension_==timeSteps,
                    "sequence generator dimensionality (" << dimension_
                    << ") != timeSteps (" << timeSteps << ")");
@@ -92,13 +91,13 @@ namespace QuantLib {
 
     template <class GSG>
     PathGenerator<GSG>::PathGenerator(
-                        const boost::shared_ptr<StochasticProcess1D>& process,
-                        const TimeGrid& timeGrid,
-                        const GSG& generator,
-                        bool brownianBridge)
+                          const boost::shared_ptr<StochasticProcess>& process,
+                          const TimeGrid& timeGrid,
+                          const GSG& generator,
+                          bool brownianBridge)
     : brownianBridge_(brownianBridge), generator_(generator),
-      dimension_(generator_.dimension()),
-      timeGrid_(timeGrid), process_(process),
+      dimension_(generator_.dimension()), timeGrid_(timeGrid),
+      process_(boost::dynamic_pointer_cast<StochasticProcess1D>(process)),
       next_(Path(timeGrid_),1.0), bb_(process_, timeGrid_, generator_) {
         QL_REQUIRE(dimension_==timeGrid_.size()-1,
                    "sequence generator dimensionality (" << dimension_
